<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MovieDetailsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_poster"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:adjustViewBounds="true"
        android:background="@drawable/imageview_gradient"
        android:scaleType="fitXY"/>
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="-60dp"
     android:background="@drawable/rounded_corner"
     >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        />
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/director"
      android:textSize="14sp"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="30dp"
      android:fontFamily="@font/quicksand_regular"
      />
    <TextView
        android:id="@+id/tv_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actor"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_regular"
        />
    <TextView
        android:id="@+id/tv_actor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_of_release"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_regular"
        />
    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/ultra_light_gray"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/quicksand_regular"
        />
    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_regular"
        />
    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writer"
        android:textSize="14sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_regular"
        />
    <TextView
        android:id="@+id/tv_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_thin"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>